Add compatibility down to Java 8